<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".MedDetailActivity" >
    
    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dip"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_name" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                   >
                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_desc" />

                <EditText
                    android:id="@+id/editTextDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewDose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_dose" />

                <EditText
                    android:id="@+id/editTextDose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/detailview_textview_date" />
                
                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:calendarViewShown="false" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_date" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
			<TableRow>
				    <CheckBox
				        android:id="@+id/chkBoxMon"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
				        android:text="@string/detailview_checkbox_textview_mon" />
			
				    <CheckBox
				        android:id="@+id/chkBoxTue"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
				        android:text="@string/detailview_checkbox_textview_tue" />
			
				    <CheckBox 
				        android:id="@+id/chkBoxWed"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
	                    android:text="@string/detailview_checkbox_textview_wed"
	                    />
			
				    <CheckBox 
				        android:id="@+id/chkBoxThu"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
	                    android:text="@string/detailview_checkbox_textview_thr"
	                    />
			
				    <CheckBox
				        android:id="@+id/chkBoxFri"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
				        android:text="@string/detailview_checkbox_textview_fri" />
			
				    <CheckBox 
				        android:id="@+id/chkBoxSat"
				        android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
	                    android:text="@string/detailview_checkbox_textview_sat" />
			    
				    <CheckBox 
				        android:id="@+id/chkBoxSun"
				       	android:layout_width="0dip"
				        android:layout_weight="1"
				        android:textSize="12sp"
	                    android:text="@string/detailview_checkbox_textview_sun" />
			</TableRow>	
            <TableRow>
                <TextView
                    android:id="@+id/textViewHourInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_hinterval" />

                <EditText
                    android:id="@+id/editTextHourInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:inputType="number"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/textViewMinuteInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailview_textview_minterval"
                     />

                <EditText
                    android:id="@+id/editTextMinunteInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" 
                    android:inputType="number"
                    />
             </TableRow>
              
            <TableRow >
                <Button 
        			android:layout_height="wrap_content"
        			android:layout_width="0dp"
        			android:layout_weight="1"
        			android:text="@string/detailview_button_save" 
        			android:onClick="saveMethod" />
                
                <Button
        			android:layout_height="wrap_content"
        			android:layout_width="0dp"
        			android:layout_weight="1"
        			android:text="@string/detailview_button_cancel" 
        			android:onClick="cancelMethod" />
              
            </TableRow>
        </TableLayout>
</ScrollView>

</LinearLayout>
